SERVER-74679: Disallow renameCollection via mongos on config server when catalog shard is enabled